--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,9 @@ bind -r h resize-pane -L 5
 
 bind -r m resize-pane -Z
 
+bind -r x kill-pane
+bind -r X kill-window
+
 set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -49,6 +52,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 
 # run cheatsheet
+unbind i
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
 # start with index 1
